--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header,
 main .title {
   font-family: "Circular Std Bold";
 }
-/* END FONTS */
+/* End FONTS */
 
 body {
   text-align: center;
@@ -18,6 +18,7 @@ body {
   height: 100%;
   width: 100%;
 }
+/* Header */
 header {
   width: 100%;
   padding: 20px;
@@ -35,6 +36,9 @@ header #nav-item {
 header #nav-item:hover {
   color: yellow;
 }
+/* End Header */
+
+/* Main */
 main {
   margin: 20px 0;
   height: 100%;
@@ -60,6 +64,9 @@ main #photo-attack{
 main img{
   width: 100%;
 }
+/* End Main */
+
+/* Footer */
 footer{
   display: flex;
   flex-direction: column;
@@ -67,6 +74,9 @@ footer{
   font-size: 14px;
   margin-bottom: 10px;
 }
+/* End Footer */
+
+/* Media Queries */
 @media screen and (max-width: 415px) {
   header {
     display: flex;
@@ -84,3 +94,4 @@ footer{
     width: 90%;
   }
 }
+/* End Media Queries */
