--- a/styles.css
+++ b/styles.css
@@ -19,28 +19,40 @@ body {
   width: 100%;
 }
 /* Header */
-header {
-  width: 100%;
-  padding: 20px;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 20px 20px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
   background-color: brown;
-  color: #fff;
-  font-size: 18px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
+  color: white;
 }
-header #nav-item {
-  margin: 0 20px;
+
+.topnav a.active {
+  background-color: brown;
+  color: white;
+  padding: 20px;
 }
-header #nav-item:hover {
-  color: yellow;
+
+.topnav .icon {
+  display: none;
 }
 /* End Header */
 
 /* Main */
 main {
-  margin: 20px 0;
+  margin: 50px 0;
   height: 100%;
 }
 main .title {
@@ -56,7 +68,7 @@ main .content {
 main p{
   margin-bottom: 10px;
 }
-main #photo-attack{
+main img{
   font-size: 16px;
   text-align: right;
   margin: 40px 0;
@@ -77,14 +89,11 @@ footer{
 /* End Footer */
 
 /* Media Queries */
-@media screen and (max-width: 660px) {
-  header {
-    display: flex;
-    flex-direction: column;
-  }
-  header #nav-item {
-    margin-bottom: 10px;
-    font-size: 25px;
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
   main .title {
     font-size: 26px;
@@ -92,6 +101,20 @@ footer{
   main .content {
     font-size: 18px;
     width: 90%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
   }
 }
 /* End Media Queries */
